crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_fullscreen_side_preview_ready.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
">   2026-08-01 10:00 first session              ┌preview───────────────────────────────────────────────────────────────┐"
"    2026-08-02 11:00 second session             │# Session                                                             │"
"                                                │                                                                      │"
"                                                │rendered preview body                                                 │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                             2/2│                                                                      │"
">                                               └──────────────────────────────────────────────────────────────────────┘"
