crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_fullscreen_stacked_narrow.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
"┌preview───────────────────────────────────────────────────┐"
"│stacked preview body                                      │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
">   2026-08-01 10:00 first session                          "
"    2026-08-02 11:00 second session                         "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                         2/2"
">                                                           "
