crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_inline_empty_query.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
">   first row                           "
"    second row                          "
"    third row                           "
"                                     3/3"
">                                       "
