crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_inline_filtered_highlights.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
">   alpha work                          "
"    beta work                           "
"                                        "
"                                     2/3"
"> work                                  "
