crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_multi_marked_rows.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
"  * one                                 "
"  * two                                 "
">   three                               "
"                          3/3 · 2 marked"
">                                       "
