crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_no_match_status_line.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                     0/2"
"> zzz                                   "
