crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_preview_error_pane.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
"┌preview───────────────────────────────────────────────────┐"
"│error: session file unreadable                            │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
">   only session                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                         1/1"
">                                                           "
