crates/path-cli/src/tui/snapshots/path_cli__tui__render__tests__snapshot_preview_loading_placeholder.snap
---
source: crates/path-cli/src/tui/render.rs
expression: terminal.backend()
---
"┌preview (loading…)────────────────────────────────────────┐"
"│deriving preview…                                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
">   only session                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                         1/1"
">                                                           "
